<resources>
    <string name="app_name">InClass09</string>
    <string name="grades">Grades</string>
    <string name="courses">Courses</string>
    <string name="hours">Hours:</string>
    <string name="gpa">GPA:</string>
    <string name="course_number">Course Number</string>
    <string name="course_name">Course Name</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="course_grade">Course Grade</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="F">F</string>
    <string name="gpa4">GPA: 4.0</string>
    <string name="hour0">Hours: 0</string>
    <string name="invalid_course_number">Enter a valid course number.</string>
    <string name="invalid_course_name">Enter a valid course name.</string>
    <string name="invalid_credit_hours">Enter a valid number of credit horus.</string>
    <string name="select_course_grade">Select a course grade.</string>
    <string name="delete_course">Delete Course</string>
    <string name="are_you_sure_course">Are you sure you want to delete this course?</string>
    <string name="add_course">Add Course</string>
</resources>